<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    tools:context=".activities.LoginActivity">

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="331dp"
        android:layout_height="26dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="94dp"
        android:background="@color/backColor" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/switchLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:background="@drawable/button"
        android:text="@string/LogIn"
        android:textColor="@color/fontColor" />

    <Button
        android:id="@+id/newButton"
        android:layout_width="126dp"
        android:layout_height="56dp"
        android:layout_below="@+id/loginButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/button"
        android:text="@string/register"
        android:textColor="@color/fontColor" />

    <Switch
        android:id="@+id/switchLogin"
        android:layout_width="158dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="99dp"
        android:layout_marginLeft="99dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="103dp"
        android:layout_marginRight="103dp"
        android:background="@color/backColor"
        android:text="@string/switchLogin"
        android:textColor="@color/fontColor" />
</RelativeLayout>