<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fields_fragment_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1">


    <TextView
        android:id="@+id/textView11"
        android:layout_width="141dp"
        android:layout_height="39dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/fields"
        android:text="@string/Bottles"
        android:textColor="@color/fontColor"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/bottlesText"
        android:layout_width="175dp"
        android:layout_height="39dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/textView11"
        android:layout_toRightOf="@+id/textView11"
        android:background="@drawable/fields"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textColor="@color/fontColor"
        android:textSize="18sp"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/tetrabriksText"
        android:layout_width="175dp"
        android:layout_height="39dp"
        android:layout_below="@+id/bottlesText"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="2dp"
        android:layout_toEndOf="@+id/textView12"
        android:layout_toRightOf="@+id/textView12"
        android:background="@drawable/fields"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColor="@color/fontColor"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/glassText"
        android:layout_width="175dp"
        android:layout_height="39dp"
        android:layout_below="@+id/tetrabriksText"
        android:layout_marginStart="9dp"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="4dp"
        android:layout_toEndOf="@+id/textView13"
        android:layout_toRightOf="@+id/textView13"
        android:background="@drawable/fields"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColor="@color/fontColor"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/paperboardText"
        android:layout_width="175dp"
        android:layout_height="39dp"
        android:layout_below="@+id/glassText"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/textView14"
        android:layout_toRightOf="@+id/textView14"
        android:background="@drawable/fields"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColor="@color/fontColor"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/cansText"
        android:layout_width="175dp"
        android:layout_height="39dp"
        android:layout_below="@+id/paperboardText"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="3dp"
        android:layout_toEndOf="@+id/textView15"
        android:layout_toRightOf="@+id/textView15"
        android:background="@drawable/fields"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColor="@color/fontColor"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="141dp"
        android:layout_height="39dp"
        android:layout_below="@+id/bottlesText"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/fields"
        android:text="@string/tetrabriks"
        android:textColor="@color/fontColor"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/textView13"
        android:layout_width="141dp"
        android:layout_height="39dp"
        android:layout_alignTop="@+id/glassText"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="-1dp"
        android:background="@drawable/fields"
        android:text="@string/glass"
        android:textAlignment="center"
        android:textColor="@color/fontColor"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="141dp"
        android:layout_height="39dp"
        android:layout_below="@+id/glassText"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/fields"
        android:text="@string/paperboard"
        android:textColor="@color/fontColor"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/textView15"
        android:layout_width="141dp"
        android:layout_height="39dp"
        android:layout_alignTop="@+id/cansText"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/fields"
        android:text="@string/Cans"
        android:textAlignment="center"
        android:textColor="@color/fontColor"
        android:textSize="18sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/loadButton"
        android:layout_width="175dp"
        android:layout_height="39dp"
        android:layout_above="@+id/sendButton"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="390dp"
        android:layout_marginEnd="119dp"
        android:layout_marginRight="119dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/button"
        android:text="@string/recycling_load"
        android:textColor="@color/fontColor" />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="175dp"
        android:layout_height="39dp"
        android:layout_above="@+id/recyclingListButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="67dp"
        android:layout_marginEnd="118dp"
        android:layout_marginRight="118dp"
        android:layout_marginBottom="17dp"
        android:background="@drawable/button"
        android:text="@string/recycling_send"
        android:textColor="@color/fontColor" />

    <Button
        android:id="@+id/recyclingListButton"
        android:layout_width="175dp"
        android:layout_height="39dp"
        android:layout_above="@+id/totalButton"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="396dp"
        android:layout_marginLeft="0dp"
        android:layout_marginEnd="119dp"
        android:layout_marginRight="119dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/button"
        android:text="@string/recycling_list"
        android:textColor="@color/fontColor" />

    <Button
        android:id="@+id/totalButton"
        android:layout_width="175dp"
        android:layout_height="39dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="392dp"
        android:layout_marginEnd="120dp"
        android:layout_marginRight="120dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/button"
        android:text="@string/recycling_total"
        android:textColor="@color/fontColor" />

</RelativeLayout>