<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RecyclingActivity">

    <include
        layout="@layout/toolbar"
        android:visibility="visible"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="59dp"
        android:text="@string/Bottles"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:fontFamily="monospace" />

    <EditText
        android:id="@+id/bottlesText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/tetrabriksText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@+id/bottlesText"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/glassText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@+id/tetrabriksText"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/paperboardText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@+id/glassText"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/cansText"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@+id/paperboardText"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_below="@+id/bottlesText"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_toStartOf="@+id/tetrabriksText"
        android:layout_toLeftOf="@+id/tetrabriksText"
        android:text="@string/tetrabriks"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:fontFamily="monospace" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_alignTop="@+id/glassText"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:layout_toStartOf="@+id/glassText"
        android:layout_toLeftOf="@+id/glassText"
        android:text="@string/glass"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:fontFamily="monospace" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_below="@+id/glassText"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:layout_toStartOf="@+id/paperboardText"
        android:layout_toLeftOf="@+id/paperboardText"
        android:text="@string/paperboard"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:fontFamily="monospace" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_alignTop="@+id/cansText"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="6dp"
        android:layout_marginRight="6dp"
        android:layout_toStartOf="@+id/cansText"
        android:layout_toLeftOf="@+id/cansText"
        android:text="@string/Cans"
        android:textSize="18sp"
        android:typeface="sans"
        app:fontFamily="monospace"
        android:textStyle="bold" />

    <Button
        android:id="@+id/loadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sendButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="134dp"
        android:layout_marginLeft="134dp"
        android:layout_marginEnd="162dp"
        android:layout_marginRight="162dp"
        android:layout_marginBottom="9dp"
        android:background="@drawable/button"
        android:text="@string/recycling_load" />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/recyclingListButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="135dp"
        android:layout_marginLeft="135dp"
        android:layout_marginEnd="161dp"
        android:layout_marginRight="161dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/button"
        android:text="@string/recycling_send" />

    <Button
        android:id="@+id/recyclingListButton"
        android:layout_width="149dp"
        android:layout_height="53dp"
        android:layout_above="@+id/totalButton"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="104dp"
        android:layout_marginLeft="104dp"
        android:layout_marginEnd="131dp"
        android:layout_marginRight="131dp"
        android:layout_marginBottom="6dp"
        android:background="@drawable/button"
        android:text="@string/recycling_list" />

    <Button
        android:id="@+id/totalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/loadButton"
        android:layout_alignLeft="@+id/loadButton"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-2dp"
        android:layout_marginLeft="-2dp"
        android:layout_marginEnd="159dp"
        android:layout_marginRight="159dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button"
        android:text="@string/recycling_total" />

</RelativeLayout>